# mlx_medsam3

./: .gitignore  ARCHITECTURE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  setup.sh
app/: README.md  run.sh
app/backend/: dicom_utils.py  main.py
app/frontend/src/app/: layout.tsx  page.tsx
app/frontend/src/components/: SegmentationCanvas.tsx
app/frontend/src/lib/: api.ts
configs/: lora_config.yaml  medical_presets.yaml
examples/: lora_training_example.py  medical_inference_example.py  point_prompt_example.py
sam3/: convert.py  lora.py  medical_utils.py  model_builder.py  utils.py
sam3/model/: encoder.py  geometry_encoders.py  maskformer_segmentation.py  model_misc.py  sam3_image.py  sam3_image_processor.py  text_encoder_ve.py  vitdet.py
scripts/: README.md  convert_medsam3_to_mlx.py  download_medsam3_weights.py  setup_medsam3.sh  verify_mlx_weights.py
